Update CMake, Codelite, config files and readme

--- a/nginx/nginx-upnp-full.conf
+++ b/nginx/nginx-upnp-full.conf
@@ -1,4 +1,4 @@
-### Rozhuk Ivan 2009.04 - 2017
+### Rozhuk Ivan 2009.04-2024
 ### nginx configuration file
 ### PHP UPnP nginx HTTP server
 
@@ -63,7 +63,7 @@ http {
 
 	server_tokens			on;
 
-	sendfile			on;
+	sendfile			off;
 	sendfile_max_chunk		64m;
 	aio				off;
 	read_ahead			128m;
