--- a/php/upnp-server.conf
+++ b/php/upnp-server.conf
@@ -211,7 +211,7 @@ php_value[date.timezone]			= "UTC"
 
 php_value[pcre.backtrack_limit]			= 100000
 php_value[pcre.recursion_limit]			= 100000
-php_flag[pcre.jit]				= on
+php_flag[pcre.jit]				= off
 
 php_admin_value[session.save_handler]		= files
 php_admin_value[session.save_path]		= "/tmp"
